# oscilloscope

./: Cargo.toml  openocd.cfg
src/: main.rs
