[package]
authors = ["MonibMokhtari <monib.mokhtari.org@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "oscilloscope"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.5.0"
#panic-halt = "0.2.0"
panic-semihosting = { version = "*", features = ["exit"] }
embedded-hal = "*"
embedded-graphics = "0.7.1"
ssd1306 = "0.7.1"
embedded-plots = "0.2.0"


# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
[dependencies.stm32f1xx-hal]
version = "0.10.0"
features = ["rt", "stm32f103", "medium"]

# this lets you use `cargo fix`!
[[bin]]
name = "oscilloscope"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
